--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -6,11 +6,12 @@
     <meta charset="UTF-8">
     <title>BluePost</title>
 
+    <meta name="viewport" content="initial-scale=1, width=device-width">
     <link rel="stylesheet" href="{% static 'post/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'post/app.css' %}">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
     <a class="navbar-brand font-weight-bold" href="/">BluePost</a>
 
     <ul class="navbar-nav ml-auto">
