implement tracking functionality

--- a/post/templates/post/track.html
+++ b/post/templates/post/track.html
@@ -6,8 +6,8 @@
     <form action="{% url 'track' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="track_number_input">Tracking number</label>
-            <input type="text" name="track_number" class="form-control" id="track_number_input" required placeholder="Тра та та хуе мое">
+            <label for="tracking_number_input">Tracking number</label>
+            <input type="text" name="tracking_number" class="form-control" id="tracking_number_input" required placeholder="Тра та та хуе мое">
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
