--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -16,7 +16,8 @@
 
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href="#">Operator login</a>
+            <a class="nav-link" href={% url 'login' %}>Operator Login</a>
+            <a class="nav-link" href={% url 'logout' %}>Logout</a>
         </li>
     </ul>
 </nav>
