output all package fields

--- a/post/templates/post/track.html
+++ b/post/templates/post/track.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="tracking_number_input">Tracking number</label>
-            <input type="text" name="tracking_number" class="form-control" id="tracking_number_input" required placeholder="Тра та та хуе мое">
+            <input type="text" name="tracking_number" class="form-control" id="tracking_number_input" required placeholder="UA12890147641178">
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
