--- a/post/templates/post/index.html
+++ b/post/templates/post/index.html
@@ -3,6 +3,6 @@
 {% block content %}
     <h1 class="text-center mb-4">Welcome to BluePost</h1>
     <div class="text-center">
-        <a href="{% url 'track' %}" class="btn btn-lg btn-outline-primary">Where is my package blyat?</a>
+        <a href="{% url 'track' %}" class="btn btn-lg btn-outline-primary">Where is my package?</a>
     </div>
 {% endblock %}
