--- a/post/templates/post/track_result.html
+++ b/post/templates/post/track_result.html
@@ -1,16 +1,12 @@
 {% extends 'post/base.html' %}
 
 {% block content %}
-{#    <h1 class="text-center">Мы украли вашу посылку, хоба</h1>#}
     <table class="table">
-    <tr>
-        <td>Sender: </td> <td> {{ object.sender_name }}</td>
-    </tr>
-    <tr>
-        <td>Receiver: </td> <td> {{ object.receiver_name }}</td>
-    </tr>
-    <tr>
-        <td>Status: </td> <td> {{ object.get_status_display }}</td>
-    </tr>
+        {% for k, v in package.items %}
+            <tr>
+                <td>{{ k }}:</td>
+                <td>{{ v }}</td>
+            </tr>
+        {% endfor %}
     </table>
 {% endblock %}
