--- a/post/templates/post/operator.html
+++ b/post/templates/post/operator.html
@@ -3,10 +3,10 @@
 {% block content %}
     <div class="row">
         <div class="col-md-4 offset-md-1">
-            <a href="{% url 'new_package' %}" class="btn btn-primary">New package info</a>
+            <a href="{% url 'new_package' %}" class="btn btn-primary mb-3">New package info</a>
         </div>
         <div class="col-md-4 offset-md-1">
-            <form action="{% url 'operator' %}" method="post">
+            <form action="{% url 'operator' %}" method="post" class="mb-3">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary">Update package info</button>
                 <div class="form-group" style="margin-top: 15px">
