add monthly statistic

--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -20,6 +20,9 @@
                 <a class="nav-link" href={% url 'operator' %}>Operator area</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href={% url 'statistic' %}>Statistic</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href={% url 'logout' %}>Logout</a>
             </li>
         {% else %}
